avances hasta la mitad del curso

--- a/Hola_Mundo.html
+++ b/Hola_Mundo.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="Hola_Mundo.js">
+    <script src="juego-adivinanzas.js">
     </script>
 </body>
 </html>
